--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -18,53 +18,52 @@
 <section class="slice bg-3 p-15">
     <div class="w-section inverse">
         <div class="container">
-           <!-- <div class="row special"> -->
-                <div class="col-lg-3 col-md-6 w-box dark border-fade">
-                    <div >
-                        <div class="thmb-img">
-                            <i class="fa fa-sitemap"></i>
-                        </div>
-
-                        <h2>Corporate Travel Management</h2>
-                        <p class="text-center">Our Solution Network helps you define your goals and reach your destination.</p>
-                        <h4 class="text-center"><a ng-href="http://www.bcdtravel.com/aw/home/Nigeria/en-NG/Home/What_We_Do/~cwih/BCD_Travel_Solution_Network/" target="_blank">See More here</a> </h4>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 w-box dark border-fade">
-                    <div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="w-box dark">
                         <div class="thmb-img">
                             <i class="fa fa-group"></i>
                         </div>
 
-                        <h2>Retail Travel Services</h2>
-                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy.</p><!--  Our agents are trained to listen and provide you the best deals every time.</p> -->
+                        <h2>Tours Packaging</h2>
+                        <p class="text-center">Packaged tours for groups of any size to any destination in the world. Our packages are suited to any budget and desired travel experiences </p>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 w-box dark border-fade">
-                    <div >
+                <div class="col-lg-3 col-md-6">
+                    <div class="w-box dark">
+                        <div class="thmb-img">
+                            <i class="fa fa-sitemap"></i>
+                        </div>
+
+                        <h2>Corporate Travel Services</h2>
+                        <p class="text-center">We provide travel services within client's coporate premises.Travel arrangements can be hectic when you have other things to do </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="w-box dark">
                         <div class="thmb-img">
                             <i class="fa fa-ticket"></i>
                         </div>
 
-                        <h2>Tours and Holidays</h2>
-                        <p class="text-center">We spell curiosity with a "Q" and create opportunities for memories that last a lifetime. Our well travelled staff have a destination to match every travel question.</p>
+                        <h2>Flight and Hotel reservations</h2>
+                        <p class="text-center">With our partnership networks of airlines, hotels and destinations, we combine the best in price, time, value and satisfaction and avail you only the best offers </p>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 w-box dark last border-fade">
-                    <div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="w-box dark last">
                         <div class="thmb-img">
                             <i class="fa fa-truck"></i>
                         </div>
 
-                        <h2>Destination Event Handling</h2>
-                        <p class="text-center">If you ever imagined getting married in a different country but wondered how to go about it, QTL has the capability to turn your dreams to reality.</p>
+                        <h2>Ground transport Services</h2>
+                        <p class="text-center">We have a wide network of car hire service partnerships that we leverage on to provide you end to end comfort from departure to arrival. </p>
                     </div>
                 </div>
 
-           <!-- </div> -->
+            </div>
         </div>
     </div>
 </section>
@@ -82,60 +81,55 @@
                                 </div>
                             </div>
                             <div class="col-md-9">
+                                <h4>Executive Card Programme Management</h4>
+                                <p>Processing of miles redemption and free Tickets.</p>
+                                <p>Priority on seat confirmation on full flights</p>
+                                <p>Access to Airline Business Lounges worldwide</p>
+                                <p>Priority at check in regardless of class of travel</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="aside-feature">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="icon-feature">
+                                    <i class="fa fa-cog"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <h4>Travel Management Services</h4>
+                                <p>On-going education of travel arranger and travellers</p>
+                                <p>Electronic travel advisories and security updates</p>
+                                <p>Vendor negotiation</p>
+                                <p>Support for company travel policy</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="aside-feature">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="icon-feature">
+                                    <i class="fa fa-cog"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
                                 <h4>Flight Services</h4>
                                 <p>Reservation and Electronic Ticketing</p>
                                 <p>Ticket Rerouting, Reconfirmation and Endorsement</p>
                                 <p>Lost Baggage Tracking and Handling</p>
-
+                                <p>Travel/Health Insurance Processing</p>
+                                <p>Transit Visa Procurement and <br>Entry Visa Facilitation</p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="aside-feature">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="icon-feature">
-                                    <i class="fa fa-cog"></i>
-                                </div>
-                            </div>
-                            <div class="col-md-9">
-                                <h4>Corporate Travel Management</h4>
-                                <p>Account management</p>
-                                <p>Management Information system (MIS) Reporting</p>
-                                <p>Decision Source: Security Manager</p>
-                                <p>Vendor Negotiation</p>
-                                <p>Meetings, Incentives, Conferences, Events (MICE)</p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="aside-feature">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="icon-feature">
-                                    <i class="fa fa-cog"></i>
-                                </div>
-                            </div>
-                            <div class="col-md-9">
-                                <h4>Travel Related Services</h4>
-                                <p>Hotel Reservations</p>
-                                <p>Car Reservation and Hire</p>
-                                <p>International Driver's License Procurement</p>
-                                <p>Travel or Health Insurance</p>
-                                <p>Visa Procurement Facilitation</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
 
 
             </div>
@@ -150,12 +144,12 @@
                                 </div>
                             </div>
                             <div class="col-md-9">
-                                <h4>Executive Card programme Management</h4>
-                                <p>Processing of Miles redemption and free Tickets </p>
-                                <p>Priority on seat confirmation on full flights</p>
-                                <p>Access to Airline Business Lounges worldwide</p>
-                                <p>Priority at check in regardless of class of travel</p>
-
+                                <h4>Protocol/ Transportation Services</h4>
+                                <p>Airport meet and greet services</p>
+                                <p>Transportation to and from the Airport</p>
+                                <p>24 Hour Emergency services</p>
+                                <p>Inter and Intra city Transportation</p>
+                                <p>Conference Organisation and provision of <br>support services for Companies</p>
                             </div>
                         </div>
                     </div>
@@ -165,17 +159,17 @@
                     <div class="aside-feature">
                         <div class="row">
                             <div class="col-md-3">
-                                <!--<div class="icon-feature">-->
-                                    <!--<i class="fa fa-cog"></i>-->
-                                <!--</div>-->
+                                <div class="icon-feature">
+                                    <i class="fa fa-cog"></i>
+                                </div>
                             </div>
                             <div class="col-md-9">
-                                <!--<h4>Hotel Services</h4>-->
-                                <!--<p>Hotel Reservation</p>-->
-                                <!--<p>Car Reservation</p>-->
-                                <!--<p>Assignment of experienced travel team</p>-->
-                                <!--<p>Account Management</p>-->
-                                <!--<p>Benchmarking, analysis and consultation</p>-->
+                                <h4>Hotel Services</h4>
+                                <p>Hotel Reservation</p>
+                                <p>Car Reservation</p>
+                                <p>Assignment of experienced travel team</p>
+                                <p>Account Management</p>
+                                <p>Benchmarking, analysis and consultation</p>
                             </div>
                         </div>
                     </div>
@@ -185,14 +179,13 @@
                     <div class="aside-feature">
                         <div class="row">
                             <div class="col-md-3">
-                                <!--<div class="icon-feature">-->
-                                    <!--<i class="fa fa-cog"></i>-->
-                                <!--</div>-->
+                                <div class="icon-feature">
+                                    <i class="fa fa-cog"></i>
+                                </div>
                             </div>
                             <div class="col-md-9">
-                                <!--<h4>We do Six</h4>-->
-                                <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>-->
-                           <!---->
+                                <h4>We do Six</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +210,7 @@
                         <span class="clearfix"></span>
 
                         <div class="text-center">
-                            <a href="mailto:info@quantumtravelsng.com" class="btn btn-lg btn-one margin-t-20 ext-source" title="" target="_blank">Get Started</a>
+                            <a href="http://ajala.ng" class="btn btn-lg btn-one margin-t-20 ext-source" title="" target="_blank">Get Started</a>
                         </div>
 
                     </div>
