--- a/assets/linker/modules/contact/contact.html
+++ b/assets/linker/modules/contact/contact.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <h3 class="section-title">Program</h3>
+                            <h3 class="section-title">Hours</h3>
                             <div class="contact-info">
                                 <h5>Monday - Friday</h5>
                                 <p>10:00 AM - 6:00 PM</p>
