--- a/.tmp/public/linker/modules/about/about.html
+++ b/.tmp/public/linker/modules/about/about.html
@@ -19,28 +19,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <p align="justify"><strong>Comprising of tested individuals drawn mainly from the aviation and business management industry, QTL has grown to become a leader in her local industry.</strong></p>
-                    <p align="justify"><strong>Brief History</strong></p>
-                    <p align="justify">Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operations by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
-                      <p align="justify">
-                          Striving to be more than your average travel agency, QTL expanded into a full blown Travel
-                          Management Company providing all aspects of travel management services ranging from visa advisory to security tracking at our travellers' destinations
-                      </p>
-                     <p align="justify">In 2009, we established an exclusive partnership with BCD Travel, the 3rd largest global Travel Management Company. This partnership
-                         produced BCD Travel Nigeria, the corporate travel management expression of QTL. Under this platform, we cater to our corporate travellers to facilitate ease of travel and support then in achieving their travel goals through our all encompassing service offering.</p>
-                    <p align="justify">QTL has witnessed exponential growth since inception and now boasts five offices across Nigeria as well as several implants on clients' sites.</p>
-                    <p align="justify"><strong>QTL in Figures</strong></p>
-                    <p align="justify">Workforce: 64</p>
-                    <p align="justify">Locations: 5</p>
-
+                    <p>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</p>
+                    <p>Incorporated in 2003 and licensed by IATA in 2004 , Quantum Travels Limited has grown to become one of Nigeria’s premier travel solution provider</p>
+                      <p>Comprising of tested individuals drawn largely from the aviation sector, we have a proper blend of staff possessing a lot of experience in travel consulting and youthfulness , all geared towards delivering unparalled service .</p>
+                     <p>We are a one stop travel shop, fully computerized and committed to providing efficient, consistent ,timely and reliable service to our customers , while representing service producers like Airlines, Car Hire companies, Holiday Resorts, Cruise Liners etc.</p>
+                    <p>We represent and possess ticket stocks of all major international and domestic Airlines. We do an annual turnover of over USD25Million and are very strong financially</p>
+                    <p>Our Mission is to ‘serve with a difference’ and we are driven by the vision of making all aspects relating to travel seamless and giving sound advice/consultancy drawn against years of experience in the travel industry.</p>
                 </div>
                 <div class="col-md-5">
                     <div class="w-box w-box-inverse">
-                       <p align="justify"><h3>Mission</h3></p>
-                        <p align="justify">“To provide out-of-the-box solutions to personal and corporate travel needs, with a holistic approach to service which creates a travel experience that exceeds customer expectations with a touch of professionalism and class.”</p>
-                        <div class="clearfix"></div>
-                        <p align="justify"><h3>Vision</h3></p>
-                        <p align="justify">“To be the vanguard of the global travel and tourism industry, always ensuring quality with close regard for safety and customer satisfaction.”</p>
+                        <p><blockquote>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</blockquote><span class="pull-right">BAA</span></p>
                     </div>
                 </div>
             </div>
@@ -52,54 +40,56 @@
     <div class="w-section inverse">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h3 class="section-title">Our Services</h3>
+                <div class="col-md-4">
+                    <h3 class="section-title">Our Expertise</h3>
 
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Retail Travel Services (B2C)</span>
+                            <span class="sr-only">Holidays and Tours</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Corporate Travel Services (B2B)</span>
+                            <span class="sr-only">Flight Bookings</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Tours Packaging</span>
+                            <span class="sr-only">Hotels</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Group Travel Facilitation</span>
+                            <span class="sr-only">Air Port Pickups/Drop Offs</span>
                         </div>
                     </div>
                 </div>
-                <!--<div class="col-md-4">-->
-                    <!--<h3 class="section-title">Services</h3>-->
-
-                    <!--<ul class="list-check">-->
-                        <!--<li><i class="fa fa-check"></i>Retail Travel Services (B2C)</li>-->
-                        <!--<li><i class="fa fa-check"></i> Corporate Travel Services (B2B)</li>-->
-                        <!--<li><i class="fa fa-check"></i> Tours Packaging</li>-->
-                        <!--<li><i class="fa fa-check"></i> Group Travel Facilitation</li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-                <div class="col-md-6">
+                <div class="col-md-4">
+                    <h3 class="section-title">Global services</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    </p>
+                    <ul class="list-check">
+                        <li><i class="fa fa-check"></i> Online Realtime Self Service Booking Platform</li>
+                        <li><i class="fa fa-check"></i> Corporate Travel Planning and Booking Services</li>
+                        <li><i class="fa fa-check"></i> Agency and Third Party Booking Services</li>
+                        <li><i class="fa fa-check"></i> Bespoke Tours and Travel Packaging</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
                     <h3 class="section-title">Why choose us</h3>
                     <ul class="bullet">
                         <li>
                             <figure>1</figure>
-                            <p>Global coverage via the BCD Travel Platform: We are present in 98 countries across 6 continents. We give you local service with global reach.</p>
+                            <p>Highest Level of professional Customer Service delivery.</p>
                         </li>
                         <li>
                             <figure>2</figure>
-                            <p>Lowest Fare Guarantee</p>
+                            <p>Guranteed Customer Satisfaction.</p>
                         </li>
                         <li>
                             <figure>3</figure>
-                            <p>Proven Track Record of Success: recognition from suppliers and clients</p>
+                            <p>Competitive Pricing and Options advantage.</p>
                         </li>
                     </ul>
                 </div>
@@ -107,3 +97,144 @@
         </div>
     </div>
 </section>
+
+<section class="slice bg-3 animate-hover-slide-3">
+    <div class="w-section inverse">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="w-box inverse">
+                        <div class="figure">
+                            <img alt="" src="linker/images/prv/team-img-5.jpg" class="img-responsive">
+                            <div class="figcaption">
+                                <ul class="social-icons text-right">
+                                    <li class="text pull-left">More on:</li>
+                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Mike Doe<small>CEO</small></h2>
+                        <p>
+                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="w-box inverse">
+                        <div class="figure">
+                            <img alt="" src="linker/images/prv/team-img-3.jpg" class="img-responsive">
+                            <div class="figcaption">
+                                <ul class="social-icons text-right">
+                                    <li class="text pull-left">More on:</li>
+                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Charles Doe<small>COO</small></h2>
+                        <p>
+                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="w-box inverse">
+                        <div class="figure">
+                            <img alt="" src="linker/images/prv/team-img-1.jpg" class="img-responsive">
+                            <div class="figcaption">
+                                <ul class="social-icons text-right">
+                                    <li class="text pull-left">More on:</li>
+                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Derek Doe<small>Client Services manager</small></h2>
+                        <p>
+                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="w-box inverse">
+                        <div class="figure">
+                            <img alt="" src="linker/images/prv/team-img-2.jpg" class="img-responsive">
+                            <div class="figcaption">
+                                <ul class="social-icons text-right">
+                                    <li class="text pull-left">More on:</li>
+                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Mark Doe<small>Travel Manager</small></h2>
+                        <p>
+                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="slice bg-3">
+    <div class="w-section inverse">
+        <div class="container">
+            <h3 class="section-title">Our partners / Clients</h3>
+            <div class="row">
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-1.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-2.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-3.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-4.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-7.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="client">
+                        <a href="#">
+                            <img src="linker/images/clients/client-6.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section> 
