--- a/assets/linker/modules/contact/contact.html
+++ b/assets/linker/modules/contact/contact.html
@@ -45,7 +45,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="section-title">Head Office</h3>
+                            <h3 class="section-title">Corporate HQ</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>184A Corporation Drive,<br>
@@ -55,17 +55,17 @@
                                 <p>info@quantumtravelsng.com</p>
 
                                 <h5>Phone</h5>
-                                <p>+234 709 873 2833</p>
+                                <p>+234 709 873 2562-4</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <h3 class="section-title">Program</h3>
                             <div class="contact-info">
                                 <h5>Monday - Friday</h5>
-                                <p>10:00 AM - 6:00 PM</p>
+                                <p>8:00 AM - 5:00 PM</p>
 
                                 <h5>Saturday</h5>
-                                <p>Closed</p>
+                                <p>9:00 AM -1:00 PM</p>
 
                                 <h5>Sunday</h5>
                                 <p>Closed</p>
@@ -74,7 +74,7 @@
                     </div>
                     <h3 class="section-title">Stay connected</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur acing elit. Aenean esrsel piesn qersl ioinm sersoe non urna dolor aecena.
+                        You can always talk to us...
                     </p>
                     <div class="social-media">
                         <a href="#"><i class="fa fa-facebook facebook"></i></a>
@@ -87,14 +87,14 @@
                 <div class="col-md-12 top-buffer">
                     <div class="row">
                         <div class="col-md-4">
-                            <h3 class="section-title">Ikeja Branch</h3>
+                            <h3 class="section-title">Ikeja</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>Suite 1-04, Centage Plaza</p>
                                 <p>14 Allen Avenue</p>
 
                                 <h5>Phone</h5>
-                                <p>+234 1 815 0926</p>
+                                <p>+234 705 508 4711</p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -106,13 +106,13 @@
                                 <p>Simpson Street, lagos Island</p>
 
                                 <h5>Phone</h5>
-                                <p>+234 1 898 4394</p>
+                                <p>+234 705 508 4703</p>
                             </div>
                         </div>
 
 
                     <div class="col-md-4">
-                        <h3 class="section-title">Abuja Office</h3>
+                        <h3 class="section-title">Abuja</h3>
                         <div class="contact-info">
                             <h5>Address</h5>
                             <p>Gwandal Center,</p>
@@ -121,7 +121,7 @@
                             <p>Wuse 2, Abuja</p>
 
                             <h5>Phone</h5>
-                            <p>+234 9 876 7060</p>
+                            <p>+234 807 456 3065</p>
                         </div>
                     </div>
                     </div>
