--- a/assets/linker/modules/home/home.html
+++ b/assets/linker/modules/home/home.html
@@ -45,13 +45,12 @@
 
             <!-- Left Text -->
             <h3 class="ls-l title" style="width:500px; top:25%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">Travelling? Need to plan the perfect getaway?</h3>
-            <h3 class="ls-l subtitle" style="top:40%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">Quantum Travels.....Infinite Possibilities</h3>
+            <h3 class="ls-l subtitle" style="top:40%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">Quantum Travels.....Every journey answers a question</h3>
             <p class="ls-l text-standard" style="width:500px; top:55%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:2500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                Quantum Travel and Tours is your one stop shop for everything travels, tours, holidays and explorations.We help package and make available
-                services for a travel experience you can never forget.Our customers.....they always come back
+                Your one-stop for all things travel. Corporate, leisure, vocational, travel insurance, visa and a host of other services.
             </p>
             <!--<a href="http://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:75%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:3500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>-->
-            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Learn More From Us</a>
+            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Ask Us</a>
         </div>
 
         <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
@@ -79,7 +78,7 @@
                 We also offer Corporate travel services for organisations.
                 This way you focus on your work and we take care of your travel arrangements.
             </p>
-            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Learn More From Us</a>
+            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Ask Us</a>
         </div>
     </div>
 </section>
@@ -97,7 +96,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>Available 24/7</h4>
-                                <p><strong>At Quantum,</strong> we are available all the time to provide the travel experience you deserve.we are a phone call, email, tweet and post away.</p>
+                                <p><strong>At QTL</strong>, we are available round the clock to provide the travel service you deserve. We are just a phone call, email, tweet or post away.</p>
                             </div>
                         </div>
                     </div>
@@ -112,8 +111,8 @@
                                 </div>
                             </div>
                             <div class="col-md-9">
-                                <h4>Cost/Value Proposition</h4>
-                                <p>We always ensure that you get the most value at the least comparable cost.We posses the partnership and negotiating power that gives us a pricing advantage</p>
+                                <h4>Value Proposition</h4>
+                                <p>We always ensure that you get the most value at the least comparable cost.We posses the partnership and negotiating power to guarantee us a pricing advantage</p>
                             </div>
                         </div>
                     </div>
@@ -129,7 +128,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>Passion</h4>
-                                <p>We are passionate about what we do, how we go about it and being the best at it.We always seek to hit the bulls eye so that our customers win, each time.</p>
+                                <p>We are passionate about what we do and it shows in the way we do it. we always strive to be the best. We seek to hit the bull's eye so that our customers win every time.</p>
                             </div>
                         </div>
                     </div>
@@ -145,7 +144,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>Relationships</h4>
-                                <p>At Quantum, relationships with our clients and partners is key. That is why we ensure that our customers are heard at all times</p>
+                                <p>At QTL, we aim to create value in our relationship with you. We have evolved from transactional business operations to collaborative partnerships with our clients. Whether it's corporate or private travel, business or leisure, we will work with you to develop a travel plan that fits your purpose. <strong>At QTL, it's all about you.</strong></p>
                             </div>
                         </div>
                     </div>
@@ -161,7 +160,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>Service Offering </h4>
-                                <p>At Quantum, we have a world wide reach in terms of travel.We offer all types of travel related services, all you need do is name it!!</p>
+                                <p>At QTL, we have a world wide reach in terms of travel.We offer all types of travel related services, all you need do is name it!!</p>
                             </div>
                         </div>
                     </div>
@@ -177,7 +176,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>We Listen</h4>
-                                <p>We do not operate in a silo, we listen to our clients and partners and always appreciate and implement feedback that positions us better to serve you.</p>
+                                <p>We do not operate in a silo but have a holistic approach to meeting your travel needs. We listen to our clients, suppliers and even our competition to ensure you always win. We welcome your feedback and work to implement them to ensure we serve you better every time.</p>
                             </div>
                         </div>
                     </div>
@@ -194,7 +193,7 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h4><i class="fa fa-quote-left fa-3x"></i></h4>
-                        <h2>The World is a book And those who do not travel read only one page !!!</h2>
+                        <h2>The World is a book and those who do not travel read only one page</h2>
                         <p>
                             St. Augustine
                         </p>
@@ -216,7 +215,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <h1>
-                        Enhance travel experience, only at Quantum <!--only on our portal -->
+                        Enhanced travel experience, only at Quantum <!--only on our portal -->
                     </h1>
                 </div>
                 <!--<div class="col-md-3">-->
