--- a/.tmp/public/linker/modules/contact/contact.html
+++ b/.tmp/public/linker/modules/contact/contact.html
@@ -45,7 +45,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="section-title">Corporate HQ</h3>
+                            <h3 class="section-title">Head Office</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>184A Corporation Drive,<br>
@@ -62,10 +62,10 @@
                             <h3 class="section-title">Program</h3>
                             <div class="contact-info">
                                 <h5>Monday - Friday</h5>
-                                <p>8:00 AM - 5:00 PM</p>
+                                <p>10:00 AM - 6:00 PM</p>
 
                                 <h5>Saturday</h5>
-                                <p>9:00 AM -1:00 PM</p>
+                                <p>Closed</p>
 
                                 <h5>Sunday</h5>
                                 <p>Closed</p>
@@ -74,7 +74,7 @@
                     </div>
                     <h3 class="section-title">Stay connected</h3>
                     <p>
-                        You can always talk to us...
+                        Lorem ipsum dolor sit amet, consectetur acing elit. Aenean esrsel piesn qersl ioinm sersoe non urna dolor aecena.
                     </p>
                     <div class="social-media">
                         <a href="#"><i class="fa fa-facebook facebook"></i></a>
@@ -87,7 +87,7 @@
                 <div class="col-md-12 top-buffer">
                     <div class="row">
                         <div class="col-md-4">
-                            <h3 class="section-title">Ikeja</h3>
+                            <h3 class="section-title">Ikeja Branch</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>Suite 1-04, Centage Plaza</p>
@@ -112,7 +112,7 @@
 
 
                     <div class="col-md-4">
-                        <h3 class="section-title">Abuja</h3>
+                        <h3 class="section-title">Abuja Office</h3>
                         <div class="contact-info">
                             <h5>Address</h5>
                             <p>Gwandal Center,</p>
