--- a/assets/linker/modules/contact/contact.html
+++ b/assets/linker/modules/contact/contact.html
@@ -9,7 +9,7 @@
                 <div class="col-md-6">
                     <h3 class="section-title">Contact us</h3>
                     <p>
-                       Please provide as much information as possible below. We will be happy to respond to your enquiries as soon as is possible
+                        Please provide as much information as possible below. We will be happy to respond to your enquiries as soon as is possible
                     </p>
 
                     <form class="form-light mt-20" role="form">
@@ -48,8 +48,8 @@
                             <h3 class="section-title">Head Office</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
-                                <p>184A Corporation Drive,<br>
-                                 Dolphin Estate, Ikoyi</p>
+                                <p>184A Corporation Drive,
+                                    <br> Dolphin Estate, Ikoyi</p>
 
                                 <h5>Email</h5>
                                 <p>info@quantumtravelsng.com</p>
@@ -88,18 +88,7 @@
 
                 <div class="col-md-12 top-buffer">
                     <div class="row">
-                        <div class="col-md-4">
-                            <h3 class="section-title">Ikeja Branch</h3>
-                            <div class="contact-info">
-                                <h5>Address</h5>
-                                <p>Suite 1-04, Centage Plaza</p>
-                                <p>14 Allen Avenue</p>
-
-                                <h5>Phone</h5>
-                                <p>+234 705 508 4711</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <h3 class="section-title">Lagos Island</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
@@ -111,26 +100,66 @@
                                 <p>+234 705 508 4703</p>
                             </div>
                         </div>
+                        <div class="col-md-3">
+                            <h3 class="section-title">Ikeja Branch</h3>
+                            <div class="contact-info">
+                                <h5>Address</h5>
+                                <p>Suite 1-04, Centage Plaza</p>
+                                <p>14 Allen Avenue</p>
+
+                                <h5>Phone</h5>
+                                <p>+234 705 508 4711</p>
+                            </div>
+                        </div>
 
 
-                    <div class="col-md-4">
-                        <h3 class="section-title">Abuja Office</h3>
-                        <div class="contact-info">
-                            <h5>Address</h5>
-                            <p>Gwandal Center,</p>
-                            <p>Plot 1015, Fria Close,</p>
-                            <p> Off Adetokunbo Ademola Way,</p>
-                            <p>Wuse 2, Abuja</p>
+                        <div class="col-md-3">
+                            <h3 class="section-title">Abuja Office</h3>
+                            <div class="contact-info">
+                                <h5>Address</h5>
+                                <p>Gwandal Center,</p>
+                                <p>Plot 1015, Fria Close,</p>
+                                <p> Off Adetokunbo Ademola Way,</p>
+                                <p>Wuse 2, Abuja</p>
 
-                            <h5>Phone</h5>
-                            <p>+234 807 456 3065</p>
+                                <h5>Phone</h5>
+                                <p>+234 807 456 3065</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <h3 class="section-title">Port Harcourt</h3>
+                            <div class="contact-info">
+                                <h5>Address</h5>
+                                <p>Mina Morrison Centre,</p>
+                                <p>67 Olu Obasanjo Road, </p>
+                                <p>Port Harcourt,</p>
+                                <p>Rivers State</p>
+
+                                <h5>Phone</h5>
+                                <p>+234 84 559 648</p>
+                                <p>+234 815 090 5738</p>
+                            </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="contact-info">
+                                <h5>Address</h5>
+                                <p>Disu Ige Court </p>
+                                <p>Shopping Plaza,</p>
+                                <p>1 Abibu Oki Street,</p>
+                                <p>off Martins Street Marina, Lagos</p>
+
+                                <h5>Phone</h5>
+                                <p>+234 905 392 1272</p>
+                                <p>+234 908 624 3144</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 </section>
