--- a/assets/linker/modules/contact/contact.html
+++ b/assets/linker/modules/contact/contact.html
@@ -143,6 +143,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-3">
+                            <h3 class="section-title">Lagos Island 2</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>Disu Ige Court </p>
